2014-05-20  Jan Hubicka  <hubicka@ucw.cz>

	PR tree-optimization/60899
	* gimple-fold.c (can_refer_decl_in_current_unit_p): Cleanup;
	assume all static symbols will have definition wile parsing and
	check the do have definition later in compilation; check that
	variable referring symbol will be output before concluding that
	reference is safe; be conservative for referring local statics;
	be more precise about when comdat is output in other partition.

2014-05-20  Jan Hubicka  <hubicka@ucw.cz>

	PR bootstrap/60984
	* ipa-inline-transform.c (inline_call): Use add CALLEE_REMOVED parameter.
	* ipa-inline.c (inline_to_all_callers): If callee was removed; return.
	(ipa_inline): Loop inline_to_all_callers until no more aliases are removed.

2014-05-20  Jan Hubicka  <hubicka@ucw.cz>

	* ipa.c (ipa_discover_readonly_nonaddressable_var): Fix dumping;
	set writeonly flag only for vars actually written to.

2014-05-20  Dehao Chen  <dehao@google.com>

	* ipa-inline-transform.c (clone_inlined_nodes): Use min of edge count
	and callee count to get clone count.
	* tree-inline.c (expand_call_inline): Use callee count instead of bb
	count in copy_body.

2014-05-20  Richard Sandiford  <rdsandiford@googlemail.com>

	PR rtl-optimization/61243
	* emit-rtl.c (emit_copy_of_insn_after): Copy CROSSING_JUMP_P.

2014-05-20  Xinliang David Li  <davidxl@google.com>

	* cgraphunit.c (walk_polymorphic_call_targets): Add
	dbgcnt and fopt-info support.
	* ipa-prop.c (ipa_make_edge_direct_to_target): Ditto.
	* ipa-devirt.c (ipa_devirt): Ditto.
	* tree-ssa-pre.c (eliminate_dom_walker::before_dom_children):
	Ditto.
	* ipa.c (walk_polymorphic_call_targets): Ditto.
	* gimple-fold.c (fold_gimple_assign): Ditto.
	(gimple_fold_call): Ditto.
	* dbgcnt.def: New counter.

2014-05-20  DJ Delorie  <dj@redhat.com>

	* config/msp430/msp430.md (split): Don't allow subregs when
	splitting SImode adds.
	(andneghi): Fix subtraction logic.
	* config/msp430/predicates.md (msp430_nonsubreg_or_imm_operand): New.
